# musictl

./: .claude.md  .gitignore  PLAN.md  README.md  SECURITY.md  pyproject.toml
src/musictl/: __init__.py  cli.py
src/musictl/commands/: art.py  clean.py  config.py  duplicates.py  organize.py  scan.py  tags.py  validate.py
src/musictl/core/: artwork.py  audio.py  encoding.py  filename_parser.py  hasher.py  scanner.py
src/musictl/utils/: config.py  console.py
tests/: conftest.py  test_art_commands.py  test_art_from_folder.py  test_audio.py  test_batch_tags.py  test_clean.py  test_consistency.py  test_duplicates_validate_commands.py  test_encoding.py  test_encoding_safety.py  test_export.py  test_filename_parser.py  test_from_filename.py  test_genre_normalization.py  test_hasher.py  test_organize_commands.py  test_phase3_commands.py  test_phase4_commands.py  test_scan_commands.py  test_scan_dupes.py  test_scan_missing.py  test_scanner.py  test_strip_v1_safety.py  test_tags_commands.py
